---
source: crates/cli/tests/owner.rs
expression: "client.gql::<Value>(OWNER_TODO_UPDATE).bearer(USER1).variables(json!({\n                \"id\" : id, \"complete\" : true\n            })).send()"
---
{
  "data": {
    "todoUpdate": {
      "todo": {
        "complete": true,
        "title": "1"
      }
    }
  }
}
